# model-gateway

./: .gitignore  CHANGELOG.md  README.md  config.yml  config.yml.example  pyproject.toml
docs/research/: 2026-02-22-litellm-overhead-elimination.md
src/model_gateway/: __init__.py  backends.py  cli.py  config.py  embed_server.py  fast_cli.py  health.py  llm_server.py  normalize.py  proxy.py  rerank_server.py  routing.py  server.py  socket_client.py  tts_cache.py  tts_server.py  worker.py
tests/: test_backends.py  test_cli.py  test_config.py  test_llm_server.py  test_proxy.py  test_routing.py  test_server.py  test_worker.py
